--- a/MetaNet.csproj
+++ b/MetaNet.csproj
@@ -13,7 +13,7 @@
     <Authors>mrzygood</Authors>
     <Description>MetaNet - .NET project tools center</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/your-org-or-user/MetaNet</RepositoryUrl>
+    <RepositoryUrl>https://github.com/mrzygood/MetaNet</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
